Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
None
-
d054755e9e452df05fb590510d25bf4167b97af7
Description
Value of the property 'containsMouse' is incorrect for a MouseArea that rejects mouse events on press (onPressed: mouse.accepted = false) and is a child of another MouseArea.
Launch the test program (nested_mouse_area.qml) and follow these steps:
1. Put the mouse cursor inside the grey rectangle
2. Press the left mouse button
3. Release the mouse button
4. Press the left mouse button
After step 1., containsMouse is expectedly set to true.
After step 2., containsMouse is unexpectedly set to false even though the mouse is still over the MouseArea.
After step 3., containsMouse is unexpectedly set to true then false even though the mouse is still over the MouseArea.
Attachments
Issue Links
- relates to
-
QTBUG-40856 MouseArea containsMouse flag is not reset on Touch Screen
-
- Open
-
- replaces
-
QTBUG-30030 mouseMove has no effect when hover is enabled and no mouse pressed
-
- Closed
-