Fix hover after press event

When a mouse press event was rejected,
we would unconditionally cancel the hover
and claim that the mouse is not contained any more.

Instead check if the mouse left and only then cancel
the hover state.

Task-number: QTBUG-30783

Change-Id: I5fac6f3a1f2807ef03e07982c603492d40d2a249
Reviewed-by: Florian Boucault <florian@boucault.net>
Reviewed-by: Alan Alpert <aalpert@blackberry.com>